--- a/Lab 2/yurts.html
+++ b/Lab 2/yurts.html
@@ -24,7 +24,12 @@
                 <dd> Each yurt is furnished with a queen-size bed with down quilt and gas-fired stove. Your luxury camping experience includes electricity and a sink with hot and cold running water. Shower and restroom faclities are located in the lodge.</dd>
                 <dt><strong>What should I bring?</strong></dt>
                 <dd>Most guests pack comfortable walking shoes and plan to dress for changing weather with ight layers of clothing. It's alo helpful to bring a flashlight and a sense of adventure!</dd>
+                <br>
             </Main>
         </header>
     </body>
+    <footer>
+        <div><i><small>Copyright &copy; 2018 Pacific Trails Resort</small></i>
+        <div>Ryan Sauer | RyanMSauer@gmail.com</div>
+    </footer>
 </html>
