Hand-On Complete

--- a/Lab 7/Hands-On Assignment/Hands-On #5.html
+++ b/Lab 7/Hands-On Assignment/Hands-On #5.html
@@ -6,15 +6,15 @@
             The Joy Of Cooking
         </title>
     </Head>
-    <body>
+    <div id="wrapper"><body>
         <header>
             <h1>Cooking: My Favorite Thing To Do</h1>
         </header>
         <nav id="coffee">
-            <a href="index.html">Home</a> <br>
-            <a href="yurts.html">Yurts</a> <br>
-            <a href="activities.html">Activities</a> <br>
-            <a href="reservations.html">Reservations</a> <br>
+            <ul><li><a href="Hands-On #5.html.html">Home</a></li>
+            <li><a href="recipes.html">Recipes</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact</a></li></ul>
         </nav>
         <main>
             <h2>Seeking Something Greater</h2>
@@ -23,9 +23,9 @@
             <p>The act of cooking for someone else is an intimate experience. Caring for a person in that way forms a connection between you and them. It is unbelievably fulfilling to have a connection like that, and to be the person initiating it.</p>
             <br>
         </main>
-        <footer">
+        <footer>
             <a href="https://www.amazon.com/Joy-of-Cooking/dp/0743246268"> A Great Book To Get You Started<a>
             <div><a href="s01179855@acad.tri-c.edu">Send me a Message</a></div>           
         </footer>
-    </body>
+    </body></div>
 </html>
