--- a/Lab 8/ch8pacific/yurts.html
+++ b/Lab 8/ch8pacific/yurts.html
@@ -9,7 +9,7 @@
     <meta name="viewport"
     content="width=device-width, initial-scale=1.0">
     <div id=wrapper>
-        <body>>
+        <body>
             <header>
                 <h1>Pacific Trails Resort</h1>
             </header>
